# artwork.shop-rust-c2pa

./: .gitignore  README.md  package-lock.json  package.json  rust-signer-container.js  worker.js  wrangler.toml
.github/workflows/: deploy.yml
rust-http-signer/: Cargo.toml  Dockerfile
rust-http-signer/src/: main.rs
