[package]
name = "artwork-c2pa-rust-http-signer"
version = "0.1.0"
edition = "2021"
description = "Local Rust HTTP signer host for A/B verification against Cloudflare worker signer"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
rcgen = { version = "0.13", features = ["pem"] }
p256 = "0.13"
x509-parser = "0.17"
ciborium = "0.2"
base64 = "0.22"

# Keep parity target aligned with current divergence investigation lane.
c2pa = { version = "0.82", default-features = false, features = ["rust_native_crypto"] }

[profile.release]
# Favor small, optimized binaries for faster container cold starts.
lto = "thin"
codegen-units = 1
strip = "symbols"
